creat Splash Screen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Memore Game</title>
 </head>
 <body>
+
+    <div class="control-buttons">
+        <span>Start Game</span>
+    </div>
     <div class="info-container">
         <div class="name">
             Hello : <span></span>
