--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
             </div>
         </div>
     </div>
+    <audio id="success" src="/audio/Audio_mixkit-achievement-bell-600.wav" preload="auto"></audio>
+    <audio id="fail" src="/audio/Audio_mixkit-wrong-long-buzzer-954.wav" preload="auto"></audio>
 
     <script src="main.js"></script>
 </body>
